--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kolmafia-scripts",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "MIT",
   "bin": {
     "kolmafia-scripts": "./dist/kolmafiaScripts.js"
@@ -22,11 +22,11 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@babel/core": "^7.12.13",
-    "@babel/plugin-proposal-class-properties": "^7.12.13",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.13",
-    "@babel/preset-env": "^7.12.13",
-    "@babel/preset-typescript": "^7.12.13",
+    "@babel/core": "7.12.13",
+    "@babel/plugin-proposal-class-properties": "7.12.13",
+    "@babel/plugin-proposal-object-rest-spread": "7.12.13",
+    "@babel/preset-env": "7.12.13",
+    "@babel/preset-typescript": "7.12.13",
     "babel-loader": "^8.2.2",
     "chalk": "^4.1.0",
     "cross-spawn": "^7.0.3",
@@ -37,6 +37,6 @@
     "webpack": "^5.20.1"
   },
   "peerDependencies": {
-    "kolmafia": "^1.0.5"
+    "kolmafia": "^1.0.11"
   }
 }
