--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "kolmafia-scripts",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "license": "MIT",
   "bin": {
     "kolmafia-scripts": "./dist/kolmafiaScripts.js"
   },
   "scripts": {
-    "build": "yarn run tsc --project internal.tsconfig.json",
-    "postinstall": "patch-package"
+    "build": "yarn run tsc --project internal.tsconfig.json"
   },
   "files": [
     "dist",
@@ -22,16 +21,18 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@babel/core": "7.12.13",
-    "@babel/plugin-proposal-class-properties": "7.12.13",
-    "@babel/plugin-proposal-object-rest-spread": "7.12.13",
-    "@babel/preset-env": "7.12.13",
-    "@babel/preset-typescript": "7.12.13",
+    "@babel/cli": "^7.14.8",
+    "@babel/compat-data": "^7.15.0",
+    "@babel/core": "^7.15.0",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.12.7",
     "babel-loader": "^8.2.2",
     "chalk": "^4.1.0",
     "cross-spawn": "^7.0.3",
-    "patch-package": "^6.2.2",
-    "postinstall-postinstall": "^2.1.0",
     "pretty-bytes": "^5.5.0",
     "terser-webpack-plugin": "^5.1.1",
     "webpack": "^5.20.1"
